--- a/templates/color.twig
+++ b/templates/color.twig
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block content %}
-    <a href="/random">
+    <a href="{{ siteUrl('random') }}">
         <div class="color">
             <div>
                 <h1>{{ page.title }}</h1>
